Remove outdated quick fixes